<resources>
    <string name="app_name">FoundIT</string>
    <string name="nombre">Nombre:</string>
    <string name="title_activity_busqueda">Map</string>
    <string name="title_activity_registro__comercio">Registro_Comercio</string>
    <string name="title_activity_reg_user">reg_user</string>
    <string name="title_activity_main_foundit">Foundit!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="mapa">Mapa</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="regUser">Reg. Usuario</string>
    <string name="RegComer">Reg. Comercio</string>
    <string name="Aceptar">Aceptar</string>
    <string name="Cancel">Cancelar</string>
    <string name="login">Login</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="textReg"><u>No tienes cuenta? ¡REGISTRATE!</u></string>
    <string name="email">Mail</string>
    <string name="infoPersonal">Información Personal</string>
    <string name="nombreComer">Nombre</string>
    <string name="EmailComer">Correo Electronico</string>
    <string name="PoblacionComer">Poblacion</string>
    <string name="ofertas">Ofertas</string>
    <string name="infoComer">Mi Comercio</string>
    <string name="fechaInicio">Fecha de Inicio</string>
    <string name="fechaFin">Fecha de finalización</string>
    <string name="imageOfert">Imagen perteneciente a la oferta.</string>
    <string name="Favoritos">Favoritos</string>
    <string name="miComercio">Mi Comercio</string>
    <string name="verOfertas">Ver Ofertas</string>
    <string name="addOferta">Añadir Oferta</string>
    <string name="misOfertas">Mis Ofertas</string>
	
	<string name="server_client_id">962136235562-4625tb4l1c0n45c3g7ri5jkvqq5g2d0e.apps.googleusercontent.com</string>

    <string-array name="paises">
        <item>España</item>
    </string-array>
    <string-array name="Categorias">
        <item>storage</item>
        <item>bus_station</item>
        <item>transit_station</item>
        <item>store</item>
        <item>shopping_mall</item>
        <item>florist</item>
        <item>park</item>
        <item>parking</item>
        <item>clothing_store</item>
        <item>food</item>
        <item>lodging</item>
        <item>health</item>
        <item>doctor</item>
        <item>accounting</item>
        <item>finance</item>
        <item>lawyer</item>
        <item>cafe</item>
        <item>restaurant</item>
        <item>night_club</item>
        <item>school</item>
        <item>home_goods_store</item>
        <item>gym</item>
        <item>locksmith</item>
        <item>furniture_store</item>
        <item>hair_care</item>
    </string-array>

</resources>
