<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Mapa"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/mapa" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/common_full_open_on_phone"
            android:title="@string/login"
            android:visible="true" />
        <item
            android:id="@+id/nav_RegUser"
            android:icon="@drawable/common_full_open_on_phone"
            android:title="@string/regUser"
            android:visible="false" />
        <item
            android:id="@+id/nav_RegComer"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/RegComer"
            android:visible="false" />
        <item
            android:id="@+id/nav_fav"
            android:icon="@android:drawable/btn_star"
            android:title="Favoritos" />
        <item
            android:id="@+id/nav_ofertas"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="Ofertas" />
    </group>

    <item
        android:title="Communicate"
        android:visible="false">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
