<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill_horizontal"
    tools:context="foundit.foundit.FragGestion_Comercio">


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:padding="5dp"
            android:text="@string/infoComer"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="sans" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:orientation="vertical">

            <EditText
                android:id="@+id/eTGestion_Comercio_NombreComer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nombreComer"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/eTGestion_Comercio_PoblacionComer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/PoblacionComer"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/eTGestion_Comercio_EmailComer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/EmailComer"
                android:inputType="textEmailAddress" />

        </LinearLayout>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <include
            layout="@layout/alertdialog_ofertas_activas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="visible" />

        <Button
            android:id="@+id/bTNGestion_Comercio_VerOfertas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ofertas"
            android:visibility="gone" />
    </TableRow>

</TableLayout>

