<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lLview_Oferta_MuestraOferta"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:drawable/btn_default"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/tVView_Oferta_NombreOferta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="NombreOferta"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="5dp">

        <ImageView
            android:id="@+id/iVView_Oferta_Imagen"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/imageOfert"
            android:scaleType="fitCenter"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:orientation="vertical"
            android:paddingEnd="5dp"
            android:paddingStart="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fechaInicio"
                    android:textAlignment="textStart" />

                <TextView
                    android:id="@+id/tVView_Oferta_FechaOfertaInicio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="2017-15-21"
                    android:textAlignment="textEnd" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fechaFin"
                    android:textAlignment="textStart" />

                <TextView
                    android:id="@+id/tVView_Oferta_FechaOferta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="2017-15-22"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <TextView
                android:id="@+id/tVView_Oferta_ID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ID: 5"
                android:textAlignment="viewStart" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
